--- a/src/app/features/courses/components/view-quiz/view-quiz.component.html
+++ b/src/app/features/courses/components/view-quiz/view-quiz.component.html
@@ -9,8 +9,6 @@
 
 <div *ngFor="let question of quiz.questions; let i = index">
 
-     <h5> {{i+1 }} - {{ question.questionText}}</h5>
-     <app-question-view [question]="question" ></app-question-view>
-     <br>
+     <app-question-form [question]="question"></app-question-form>
 
 </div>
