--- a/src/app/features/dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="dashboard-container">
     <div class="sidebar">
-        <h2>Menu</h2>
+        <!-- <img src="{{logo}}" alt="" height="50px"> -->
+        <!-- <h2>Menu</h2> -->
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -24,6 +25,7 @@
             <li><a href="#">Contact</a></li>
         </ul>
         <p>6692b5f704a752493730f489</p>
+        <button class="logout" (click)="logout()">Logout</button>
     </div>
     <div class="main-content">
         <router-outlet></router-outlet>
