--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -22,6 +22,8 @@
                 </div>
             </div>
 
+            <div class="form-group">No account? <a href="" routerLink="../register">Create one!</a></div>
+
             <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
         </form>
     </div>
