--- a/src/app/features/courses/components/question-form/question-form.component.css
+++ b/src/app/features/courses/components/question-form/question-form.component.css
@@ -195,6 +195,7 @@ h1 {
   margin-bottom: 10px;
   font-size: 20px;
   color: #555;
+  font-weight:normal !important;
 }
 
 .question-options input {
