--- a/src/app/features/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard/dashboard.component.scss
@@ -81,3 +81,13 @@
     }
   }
   
+
+  // ============
+
+  .logout{
+    border: 1px solid black;
+    background-color: transparent;
+    padding: 10px;
+    color: lightgray;
+    border-radius: 4px;
+  }
