--- a/src/app/features/courses/components/question-form/question-form.component.css
+++ b/src/app/features/courses/components/question-form/question-form.component.css
@@ -25,7 +25,7 @@ label {
 }
 
 /* Input, textarea, and select styling */
-textarea, select, input[type="text"]{
+textarea, select, input[type="text"],input[type="number"]{
   width: calc(100% - 10px);
   padding: 10px ;
   margin-top: 5px;
@@ -37,7 +37,7 @@ textarea, select, input[type="text"]{
   transition: border-color 0.3s ease;
 }
 
-textarea:focus, select:focus, input[type="text"]:focus {
+textarea:focus, select:focus, input[type="text"]:focus,input[type="number"]:focus {
   border-color: #007bff;
   outline: none;
 }
@@ -131,10 +131,9 @@ h1 {
 .question-container{
   display: grid;
   grid-template-columns: 70% 30%;
-  grid-template-rows: 50% 50%;
-
+  grid-template-rows: 33.33% 33.33% 33.33%;
   .question-text{
-    grid-area: 1 / 1 / span 2 / span 1;
+    grid-area: 1 / 1 / span 3 / span 1;
   }
 
 }
