--- a/src/app/features/dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
         <!-- <img src="{{logo}}" alt="" height="50px"> -->
         <!-- <h2>Menu</h2> -->
         <ul>
-            <!-- <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li> -->
+            <li><a routerLink="student-home">Home</a></li>
+            <!-- <li><a href="#">About</a></li> -->
             <li><a routerLink="organizations">Organizations</a></li>
             <li><a routerLink="courses">Courses</a></li>
             <!-- <li class="submenu">
