qustion button color change

--- a/src/app/features/courses/components/view-quiz/view-quiz.component.html
+++ b/src/app/features/courses/components/view-quiz/view-quiz.component.html
@@ -16,7 +16,7 @@
 <div class="sidebar">
   <span *ngFor="let question of quiz.questions; let i = index">
     <button
-      [ngClass]="question.options ? 'answered' : 'notAnswered'"
+      [ngClass]="!question.options ? 'answered' : 'notAnswered'"
       (click)="scroll(i)"
     >
       {{ i + 1 }}
