--- a/src/app/features/courses/components/question-form/question-form.component.html
+++ b/src/app/features/courses/components/question-form/question-form.component.html
@@ -27,7 +27,7 @@ TODO
 
 
 
-<div *ngIf="!question?._id">
+<div *ngIf="!questionForm.get('_id')?.value">
   <form [formGroup]="questionForm" (ngSubmit)="submit()">
     <div class="question-container">
       <div class="question-text">
@@ -58,28 +58,30 @@ TODO
 
 
 
+    <div formArrayName="options">
 
-    <div formArrayName="options"
-      *ngIf="questionForm.get('questionType')?.value === 'multipleChoice' || questionForm.get('questionType')?.value === 'multiSelect'">
-      <div class="option" *ngFor="let option of options.controls; let i=index" [formGroupName]="i"
-        [ngClass]="options.controls[i]?.get('isCorrect')?.value  ? 'correct-answer' : '' ">
-        <input *ngIf="questionForm.get('questionType')?.value === 'multiSelect'" type="checkbox"
-          formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
-        <input *ngIf="questionForm.get('questionType')?.value === 'multipleChoice'" type="radio"
-          formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
-        <input formControlName="text" class="option-input" placeholder="option {{i+1}}" />
-        <button type="button" (click)="removeOption(i)">X</button>
+      <div
+        *ngIf="questionForm.get('questionType')?.value === 'multipleChoice' || questionForm.get('questionType')?.value === 'multiSelect'">
+        <div class="option" *ngFor="let option of options.controls; let i=index" [formGroupName]="i"
+          [ngClass]="options.controls[i]?.get('isCorrect')?.value  ? 'correct-answer' : '' ">
+          <input *ngIf="questionForm.get('questionType')?.value === 'multiSelect'" type="checkbox"
+            formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
+          <input *ngIf="questionForm.get('questionType')?.value === 'multipleChoice'" type="radio"
+            formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" />
+          <input formControlName="text" class="option-input" placeholder="option {{i+1}}" />
+          <button type="button" (click)="removeOption(i)">X</button>
+        </div>
+        <button class="add-option-button" type="button" (click)="addOption()">Add Option</button>
       </div>
-      <button class="add-option-button" type="button" (click)="addOption()">Add Option</button>
-    </div>
 
-    <div formArrayName="options" *ngIf="questionForm.get('questionType')?.value === 'trueFalse'">
-      <div *ngFor="let option of options.controls; let i=index" [formGroupName]="i">
-        <label>{{ option.value.text }}:</label>
-        <input type="checkbox" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" /> Correct
+      <div formArrayName="options" *ngIf="questionForm.get('questionType')?.value === 'trueFalse'">
+        <div *ngFor="let option of options.controls; let i=index" [formGroupName]="i">
+          <label>{{ option.value.text }}:</label>
+          <input type="checkbox" formControlName="isCorrect" (change)="selectOnlyOneCorrect(i)" value="true" /> Correct
+        </div>
       </div>
+      
     </div>
-
     <!-- <div>
       <label>Explanation:</label>
       <textarea formControlName="explanation"></textarea>
@@ -102,38 +104,47 @@ TODO
 
 
 <!-- question-view.component.html -->
-<div class="question-view-container" *ngIf="question?._id">
-  <div class="question-header">
-    <h2>{{ question.questionText }}</h2>
-    <div class="question-meta">
-      <span class="question-type">{{ question.questionType }}</span>
-      <span class="question-difficulty">{{ question.difficulty }}</span>
-    </div>
-  </div>
+<div class="question-view-container" *ngIf="questionForm.get('_id')?.value">
 
-  <div class="question-options">
-    <ng-container *ngIf="question.questionType === 'multipleChoice' || question.questionType === 'trueFalse'">
-      <div *ngFor="let option of question.options;let i=index">
-        <label>
-          <input type="radio" name="{{question._id}}" [value]="option.text" />
-          {{ option.text }}
-        </label>
-      </div>
-    </ng-container>
-    <ng-container *ngIf="question.questionType === 'multiSelect'">
-      <div *ngFor="let option of question.options">
-        <label>
-          <input type="checkbox" [value]="option.text" />
-          {{ option.text }}
-        </label>
-      </div>
-    </ng-container>
-  </div>
+  <form [formGroup]="questionForm">
 
-  <div *ngIf="false" class="advanced-options">
-    <div class="explanation">
-      <h3>Explanation</h3>
-      <p>{{ question.explanation }}</p>
+    <div class="question-header">
+      <h2>{{ questionForm.get('questionText')?.value }}</h2>
+      <div class="question-meta">
+        <span class="question-type">{{ questionForm.get('questionType')?.value }}</span>
+        <span class="question-difficulty">{{ questionForm.get('difficulty')?.value }}</span>
+      </div>
     </div>
-  </div>
+
+    <div class="question-options" formArrayName="options">
+      <ng-container
+        *ngIf="questionForm.get('questionType')?.value === 'multipleChoice' || questionForm.get('questionType')?.value === 'trueFalse'">
+        <div *ngFor="let option of options.controls;let i=index" formGroupName="{{i}}">
+          <label>
+            <input type="radio" name="isCorrect" formControlName="isCorrect" [value]="true"
+              (change)="selectOnlyOneCorrect(i)" />
+            {{ option.get('text')?.value }}
+          </label>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="questionForm.get('questionType')?.value === 'multiSelect'">
+        <div *ngFor="let option of options?.controls;let i=index" formGroupName="{{i}}">
+          <label>
+            <input type="checkbox" name="isCorrect" fomControlName="isCorrect" (change)="selectOnlyOneCorrect(i)"
+              [value]="true" />
+            {{ option.get('text')?.value }}
+          </label>
+        </div>
+      </ng-container>
+    </div>
+
+    <div *ngIf="false" class="advanced-options">
+      <div class="explanation">
+        <h3>Explanation</h3>
+        <p>{{ question.explanation }}</p>
+      </div>
+    </div>
+
+  </form>
+
 </div>
